Update user menu styling and layout - Fix issue with user menu on smaller screen sizes - Change label for institution select input

--- a/static/style.css
+++ b/static/style.css
@@ -663,7 +663,6 @@ ul.tree ul {
 @media (min-width: 332px) {
     .user-dropdown {
         display: block;
-        width: auto;
     }
 
     .user-dropdown .dropdown-menu {
